--- a/Credit_Risk_Classification.ipynb
+++ b/Credit_Risk_Classification.ipynb
@@ -5,11 +5,11 @@
    "id": "2d9655bf",
    "metadata": {},
    "source": [
-    "# Credit Risk Classification using Logistic Regression\n",
-    "**Author: Sarah [Last Name]**\n",
+    "# Credit Risk Model – Predicting Loan Health with Logistic Regression\n",
+    "**Author: Sarah Burnap**\n",
     "**Date: May 2025**\n",
     "---\n",
-    "This academic notebook explores the use of Logistic Regression in classifying loan applications into healthy and high-risk categories. It employs data preprocessing, model training, and evaluation techniques to assess model performance and its implications for credit risk analysis."
+    "In this notebook, I’m building and testing a logistic regression model to see if it can tell the difference between high-risk and healthy loans. The idea is to use a handful of key features—things like loan size, interest rate, and borrower income—to train the model, then evaluate how well it actually predicts outcomes."
    ]
   },
   {
@@ -38,7 +38,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Split the Data into Training and Testing Sets"
+    "## Splitting the Data\n",
+    "Time to split our dataset into training and testing sets so we can train the model and see how it performs on unseen data."
    ]
   },
   {
@@ -46,7 +47,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1: Read the `lending_data.csv` data from the `Resources` folder into a Pandas DataFrame."
+    "## Step 1: Load the Data\n",
+    "We’re pulling in the `lending_data.csv` file to get a look at the dataset we’re working with."
    ]
   },
   {
@@ -181,7 +183,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2: Create the labels set (`y`)  from the “loan_status” column, and then create the features (`X`) DataFrame from the remaining columns."
+    "## Step 2: Separate Labels and Features\n",
+    "The column we’re trying to predict is `loan_status`, so we’ll pull that out as our target (`y`) and use everything else as our features (`X`)."
    ]
   },
   {
@@ -346,7 +349,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 3: Split the data into training and testing datasets by using `train_test_split`."
+    "## Step 3: Train/Test Split\n",
+    "We’ll split the features and labels into training and test sets using `train_test_split`, with a 75/25 split."
    ]
   },
   {
@@ -376,7 +380,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a Logistic Regression Model with the Original Data"
+    "## Building the Logistic Regression Model\n",
+    "Now we’ll build a logistic regression model using scikit-learn and fit it to our training data."
    ]
   },
   {
@@ -384,7 +389,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  Step 1: Fit a logistic regression model by using the training data (`X_train` and `y_train`)."
+    "## Step 1: Train the Model\n",
+    "This is where we actually fit the model to our training features and labels."
    ]
   },
   {
@@ -423,7 +429,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2: Save the predictions on the testing data labels by using the testing feature data (`X_test`) and the fitted model."
+    "## Step 2: Make Predictions\n",
+    "Using the trained model, we’ll make predictions on our test data."
    ]
   },
   {
@@ -441,11 +448,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 3: Evaluate the model’s performance by doing the following:\n",
-    "\n",
-    "* Generate a confusion matrix.\n",
-    "\n",
-    "* Print the classification report."
+    "## Step 3: Evaluate the Model\n",
+    "We’ll look at a confusion matrix and classification report to see how well our model did at predicting loan status."
    ]
   },
   {
@@ -501,7 +505,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 4: Discussion Prompt."
+    "## Step 4: Thoughts on Model Performance"
    ]
   },
   {
@@ -509,13 +513,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
+    "**So how did the model do?**\n",
     "\n",
-    "**Answer:** The logistic regression model using the original data does a fabulous job of predicting the values for the 0 class (healthy loans) data. The precision for the 1 class is 1.00 (18663 / 18663 + 56), meaning the model correctly made the positive prediction virtually every time. The recall-the number of times the model correctly predicted a healthy transaction-was equally impressive for the 0 class at 0.99 (18663 / 18663 + 102).\n",
+    "Pretty well, especially when it came to predicting the 0 class (healthy loans). The precision and recall were both nearly perfect, meaning the model was really consistent in identifying healthy loans correctly.\n",
     "\n",
-    "The logistic regression model did not do quite as good a job predicting the values for the 1 class (high-risk loans). First, the precision rate, or the number of times the model correctly identified high-risk loans, was recorded at 0.85 or 85% (563 / 563 + 102). The recall-the number of times the model accurately predicted the high-risk loans versus the total number of high-risk loans-was 0.91 (563 / 56 + 563).\n",
+    "For high-risk loans (1 class), the performance dropped a little. Precision was around 85% and recall was 91%, which tells me the model caught most of the high-risk loans but had a few false positives. Not ideal, but not bad either—definitely usable, especially as a baseline.\n",
     "\n",
-    "Overall though, the logistic regression model generated pretty impressive numbers for the model predictions."
+    "Overall? Solid results for a first pass with logistic regression."
    ]
   },
   {
